--- a/2-clock/style.css
+++ b/2-clock/style.css
@@ -6,7 +6,7 @@ html {
   font-family: "helvetica neue";
 }
 
-body {
+body>div{
   font-size: 2rem;
   display: flex;
   flex: 1;
@@ -43,22 +43,36 @@ body {
   transform: rotate(90deg);
   transition: all 0.05s;
   transition-timing-function: cubic-bezier(0, 4.36, 0, 0.99);
+  border: black solid 1px;
 
 }
 
 .second-hand{
-    background: red;
+    background: lightgray;
     height: 3px;
 }
 
 
 .min-hand{
-    background: blue;
+    background: gray;
 
 }
 
 .number{
-    position: absolute;
-    top: 50%;
-    right: 50%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  color: white;
+}
+
+.number>div{
+  font-weight: 600;
+}
+
+body>#mute{
+  border: black dotted 3px;
+  font-weight: 800;
+  border-radius: 25%;
+  text-align: center;
+  text-transform: uppercase;
 }
