Add landing page

--- a/3-Css-Variables/style.css
+++ b/3-Css-Variables/style.css
@@ -1,13 +1,19 @@
 :root{
     --base: #ffffff;
-    --spacing: 10px;
-    --blur: 10px;
+    --spacing: 0px;
+    --blur: 0px;
+    --border-radius: 0%;
+    --width: 800px;
+    --height: 600px;
 }
 
 img{
     padding: var(--spacing);
     background: var(--base);
     filter: blur(var(--blur));
+    border-radius: var(--border-radius);
+    width: var(--width);
+    height: var(--height);
 }
 
 .h1{
@@ -21,8 +27,14 @@ body{
     font-family: "helvetica neue", sans-serif;
     font-weight: 100;
     text-align: center;
+    
 }
 
 .controls{
     margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
 }
