--- a/style.css
+++ b/style.css
@@ -1,23 +1,46 @@
 html {
-  margin: 0;
+  margin: 20px;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  background: #729fca;
+  text-align: center;
+  font-family: Tahoma, sans-serif;
+
 }
 
-img {
-  max-width: 200px;
+
+.links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
-.links{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+.links > div {
+  background-color: rgba(255, 255, 255, 0.542);
+  border-radius: 6%;
+  margin: 0;
+  padding: 0;
+  transition: all 0.5s;
 }
 
-.links>div>a{
-    width: 50%;
+.links > div:hover {
+  transform: scale(1.1);
+}
+
+.links a {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.links img {
+  max-width: 300px;
+  height: 300px;
+  border-radius: 6%;
 }
