--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ html {
   background: #729fca;
   text-align: center;
   font-family: Tahoma, sans-serif;
-
 }
-
 
 .links {
   display: flex;
@@ -18,9 +16,10 @@ html {
   justify-content: center;
   align-items: center;
   gap: 30px;
-  }
-  
-  .links > div {
+}
+
+.links > div {
+  max-width: 300px;
   background-color: rgba(255, 255, 255, 0.542);
   border-radius: 6%;
   margin: 0;
