--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
   justify-content: center;
   align-items: center;
   gap: 30px;
+
 }
 
 .links > div {
@@ -42,4 +43,10 @@ html {
   max-width: 300px;
   height: 300px;
   border-radius: 6%;
+}
+
+.links h2{
+  height: 60px;
+  padding: 5px;
+  margin: 0;
 }
