--- a/28-video-speed-controller-ui/style.css
+++ b/28-video-speed-controller-ui/style.css
@@ -17,20 +17,32 @@ body {
   gap: 10px;
 }
 
-video {
+.flex {
   max-width: calc(70vw - 50px);
 }
 
 .speed {
   min-height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   background-color: white;
   min-width: 60px;
   border-radius: 20px;
-  transition: transform 0.3s;
+  transition: all 0.3s;
+  overflow: hidden;
+}
+.speed-bar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background:linear-gradient(rgba(255, 0, 0, 0.601),rgba(255, 255, 0, 0.246)),linear-gradient(rgb(0, 149, 255),rgb(255, 255, 0));
+min-height: 10%;
+color: white;
+text-shadow: 0 0 5px black,0 3px 5px black;
+user-select: none;
+
+
 }
 .speed:hover {
-  transform: scale(1.02);
+  transform: scale(1.05);
+  box-shadow: 3px 3px 15px black;
 }
