--- a/29-countdown-clock/style.css
+++ b/29-countdown-clock/style.css
@@ -8,7 +8,7 @@ body {
       rgba(66, 66, 249, 0.857),
       rgba(255, 255, 255, 0.538)
     ),
-    linear-gradient(-180deg, rgb(217, 223, 28), rgba(131, 9, 9, 0.538));
+    linear-gradient(-45deg, rgb(217, 223, 28), rgba(131, 9, 9, 0.573));
   font-family: Arial, Helvetica, sans-serif;
 }
 .timer {
@@ -78,6 +78,7 @@ body {
   border-radius: 36px;
   padding: 20px;
   transition: all 0.3s;
+  opacity: 0;
 }
 .display:hover {
   transform: scale(1.1);
@@ -87,4 +88,23 @@ body {
   min-height: 76px;
   min-width: 120px;
   text-align: center;
+}
+.shake {
+  animation: shake infinite 0.5s;
+}
+.active {
+  opacity: 1;
+}
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25%,
+  75% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
 }
